--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -174,6 +174,7 @@ html, body {
 .button{
   user-select: none;
   margin: 2px;
+  background-color: white;
   padding: 5px;
   font-size: 12px;
   text-decoration: none;
@@ -263,4 +264,7 @@ html, body {
 .content{
   padding: 0px;
   margin: 0px;
+}
+.mapControls{
+  float: right;
 }
