--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -24,8 +24,14 @@ html, body {
   padding: 0;
 }
 
+
+.sidebar{
+  width: 150px;
+}
 .nav-item{
-  text-align: center;
+  text-align: left;
+  padding-left: 10px;
+  overflow-x: hide;
   padding-top: -5px;
   padding-bottom: -5px;
 }
