--- a/static/css/application.css
+++ b/static/css/application.css
@@ -43,7 +43,7 @@ html, body {
   width: 100%;
   background-color: rgba(255, 255, 255, 0.88);
   box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.8);
-  
+
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -87,7 +87,7 @@ html, body {
   position: relative;
   margin: 0px;
   padding: 0px;
-  
+
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -176,3 +176,19 @@ a.dropdown-schedule > img{
   font-weight: 500;
 }
 /* ===================== */
+.pulsate {
+    -webkit-animation: pulsate 3s ease-out;
+    -webkit-animation-iteration-count: infinite;
+    opacity: 0.5;
+}
+@-webkit-keyframes pulsate {
+    0% {
+        opacity: 0.5;
+    }
+    50% {
+        opacity: 1.0;
+    }
+    100% {
+        opacity: 0.5;
+    }
+}
