--- a/static/css/application.css
+++ b/static/css/application.css
@@ -33,12 +33,11 @@ html, body {
     bottom: -510px;
     left: 0;
     right: 0;
-    padding-left: 15px;
-    background: #ee0000ee;
+    padding: 10px 30px 10px 15px; /* leave some space for the close button */
+    background: #ee2222;
     color: #ffffff
     text-align: center;
     font-size: 15px;
-    line-height: 1.5;
     /*overflow: hidden;*/
 }
 @keyframes slideUp {
