--- a/static/css/application.css
+++ b/static/css/application.css
@@ -120,6 +120,30 @@ li {
 }
 
 
+/* CSS for about modal*/
+
+div.modal{
+  display: show;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4); 
+}
+
+div.modalContent{
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
 /* CSS for dropdown menus */
 div.dropdown ul {
   list-style: none none;
