--- a/static/css/application.css
+++ b/static/css/application.css
@@ -123,7 +123,7 @@ li {
 /* CSS for about modal*/
 
 div.modal{
-  display: show;
+  display: none;
   position: fixed;
   z-index: 1;
   padding-top: 100px;
@@ -133,7 +133,7 @@ div.modal{
   height: 100%;
   overflow: auto;
   background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4); 
+  background-color: rgba(0,0,0,0.4);
 }
 
 div.modalContent{
@@ -142,6 +142,20 @@ div.modalContent{
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
+}
+
+span.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+span.close:hover,
+span.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 /* CSS for dropdown menus */
