--- a/static/css/application.css
+++ b/static/css/application.css
@@ -125,11 +125,9 @@ li {
 div.modal{
   position: fixed;
   z-index: 10;
-  padding-top: 100px;
-  left: 0;
+  padding: 50px 0 30px;
   top: 0;
-  width: 100%;
-  height: 100%;
+  bottom: 0;
   overflow: auto;
   background-color: rgb(0,0,0);
   background-color: rgba(0,0,0,0.4);
