Changed template to vue component

--- a/static/css/application.css
+++ b/static/css/application.css
@@ -156,6 +156,31 @@ span.close:focus {
     cursor: pointer;
 }
 
+/*CSS for notification modal*/
+div.notification-modal{
+  position: fixed;
+  z-index: 9998;
+  top: 0;
+  left: 0;
+  right: 0;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+  height: 100vh;
+}
+
+div.notification-content{
+  background-color: #fefefe;
+  margin: 50px auto 30px;
+  z-index: 10;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 30%;
+}
+
+div.notification-button{
+  float: right;
+}
+
 /* CSS for dropdown menus */
 div.dropdown ul {
   list-style: none none;
@@ -420,4 +445,61 @@ p.dropdown-submenu-subitem {
   100% {
     transform: scale(.8);
   }
+}
+
+/*CSS for bindpopup*/
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* The actual popup */
+.popup .popuptext {
+  visibility: hidden;
+  width: 160px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -80px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class - hide and show the popup */
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;} 
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
 }
