fix hound violations

--- a/frontend/src/assets/styles.scss
+++ b/frontend/src/assets/styles.scss
@@ -1,6 +1,7 @@
-html,body{
-  margin: 0px;
-  padding: 0px;
+html,
+body {
+  margin: 0;
+  padding: 0;
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   min-height: 100%;
   top: 0;
