--- a/frontend/src/assets/vars.scss
+++ b/frontend/src/assets/vars.scss
@@ -1,23 +1,60 @@
 @import "~bulma/sass/utilities/all";
 
+/* Master colors definition. */
 $primary: #ed1c24;
 $link: #ff0000;
-$primary-invert: findColorInvert($primary);
+$black: #181818;
+$white: #ffffff;
 $twitter: #4099ff;
 $twitter-invert: findColorInvert($twitter);
 
-$colors: (
-    "white": ($white, $black),
-    "black": ($black, $white),
-    "light": ($light, $light-invert),
-    "dark": ($dark, $dark-invert),
-    "primary": ($primary, $primary-invert),
-    "info": ($info, $info-invert),
-    "success": ($success, $success-invert),
-    "warning": ($warning, $warning-invert),
-    "danger": ($danger, $danger-invert),
+/*
+ * The defineColor* family of functions define a CSS variable `${name}` to be the given color.
+ *   Example: @include defineColorRGB(--color-primary, 0, 255, 0);
+ *            a { color: var(--color-primary); }
+ * Also defines a var `${name}-rgb` to have only the raw values, for use with functions like rgba().
+ *   Example: a { color: rgba(var(--color-primary-rgb), 0.5); }
+ */
+@mixin defineColor($name, $css-color) {
+  #{$name}: #{$css-color};
+  #{$name}-rgb: unquote("#{red($css-color)}, #{green($css-color)}, #{blue($css-color)}");
+}
+@mixin defineColorRGB($name, $red, $green, $blue) {
+  #{$name}: unquote("rgb(#{$red}, #{$green}, #{$blue})");
+  #{$name}-rgb: unquote("#{$red}, #{$green}, #{$blue}");
+}
+
+/** This is the (default) light theme for the app. These variables are native CSS vars. They are evaluated at runtime. */
+body {
+  @include defineColor(--color-fg-strong, $black);
+  @include defineColor(--color-fg-normal, lighten($black, 15%));
+  @include defineColor(--color-fg-light, lighten($black, 30%));
+  @include defineColor(--color-bg-normal, $white);
+  @include defineColor(--color-bg-less, darken($white, 12%));
+  @include defineColor(--color-bg-least, darken($white, 25%));
+  @include defineColor(--color-primary, $primary);
+}
+
+/** This is the dark theme for the app. */
+body[data-theme="dark"] {
+  @include defineColor(--color-fg-strong, $white);
+  @include defineColor(--color-fg-normal, darken($white, 15%));
+  @include defineColor(--color-fg-light, darken($white, 30%));
+  @include defineColor(--color-bg-normal, $black);
+  @include defineColor(--color-bg-less, lighten($black, 12%));
+  @include defineColor(--color-bg-least, lighten($black, 25%));
+}
+
+/** Bulma color overrides. */
+$custom-colors: (
     "twitter": ($twitter, $twitter-invert)
 );
+$scheme-main: unquote("var(--color-bg)");
+$scheme-invert: unquote("var(--color-fg-strong)");
+$text-strong: unquote("var(--color-fg-strong)");
+$text: unquote("var(--color-fg-normal)");
+$text-light: unquote("var(--color-fg-light)");
+$text-invert: unquote("var(--color-bg)");
 
 
 @import "~bulma";
