--- a/frontend/src/assets/vars.scss
+++ b/frontend/src/assets/vars.scss
@@ -10,30 +10,28 @@ $twitter: #4099ff;
 $twitter-invert: findColorInvert($twitter);
 
 /*
- * The defineColor* family of functions define a CSS variable `${name}` to be the given color.
- *   Example: @include defineColorRGB(--color-primary, 0, 255, 0);
+ * The define-color* family of functions define a CSS variable `${name}` to be the given color.
+ *   Example: @include define-color-RGB(--color-primary, 0, 255, 0);
  *            a { color: var(--color-primary); }
  * Also defines a var `${name}-rgb` to have only the raw values, for use with functions like rgba().
  *   Example: a { color: rgba(var(--color-primary-rgb), 0.5); }
  *
  * https://codyhouse.co/blog/post/how-to-combine-sass-color-functions-and-css-variables
  */
-@mixin defineColor($name, $css-color) {
+@mixin define-color($name, $css-color) {
   #{$name}: #{$css-color};
   #{$name}-rgb: unquote("#{red($css-color)}, #{green($css-color)}, #{blue($css-color)}");
 }
-@mixin defineColorRGB($name, $red, $green, $blue) {
+@mixin define-color-RGB($name, $red, $green, $blue) {
   #{$name}: unquote("rgb(#{$red}, #{$green}, #{$blue})");
   #{$name}-rgb: unquote("#{$red}, #{$green}, #{$blue}");
 }
-/**
- * This function overrides the SASS rgba() function to support CSS variables. If a variable is the argument of rgba(),
- * the built-in CSS rgba() function is used instead.
- *
- * BUG! This function will NOT work if the argument is any more complex than a single var(--xxx). Caveat emptor.
- */
+
+// This function overrides the SASS rgba() function to support CSS variables. If a variable is the argument of rgba(),
+// the built-in CSS rgba() function is used instead.
+// BUG! This function will NOT work if the argument is any more complex than a single var(--xxx). Caveat emptor.
 @function rgba($args...) {
-  // I could not figure out how to call the original rgba function. So.... enjoy this HACK BULLSHIT :(.
+  // I could not figure out how to call the original rgba function. So.... enjoy this HACK BS :(.
   $color: null;
   $alpha: null;
   @if length($args) == 4 {
@@ -54,28 +52,28 @@ $twitter-invert: findColorInvert($twitter);
   }
 }
 
-/** This is the (default) light theme for the app. These variables are native CSS vars. They are evaluated at runtime. */
+// This is the (default) light theme for the app. These variables are native CSS vars. They are evaluated at runtime.
 body {
-  @include defineColor(--color-fg-strong, $black);
-  @include defineColor(--color-fg-normal, lighten($black, 15%));
-  @include defineColor(--color-fg-light, lighten($black, 30%));
-  @include defineColor(--color-bg-normal, $white);
-  @include defineColor(--color-bg-less, darken($white, 12%));
-  @include defineColor(--color-bg-least, darken($white, 25%));
-  @include defineColor(--color-primary, $primary);
+  @include define-color(--color-fg-strong, $black);
+  @include define-color(--color-fg-normal, lighten($black, 15%));
+  @include define-color(--color-fg-light, lighten($black, 30%));
+  @include define-color(--color-bg-normal, $white);
+  @include define-color(--color-bg-less, darken($white, 12%));
+  @include define-color(--color-bg-least, darken($white, 25%));
+  @include define-color(--color-primary, $primary);
 }
 
-/** This is the dark theme for the app. */
+// This is the dark theme for the app.
 [data-theme="dark"] {
-  @include defineColor(--color-fg-strong, $white);
-  @include defineColor(--color-fg-normal, darken($white, 15%));
-  @include defineColor(--color-fg-light, darken($white, 30%));
-  @include defineColor(--color-bg-normal, $black);
-  @include defineColor(--color-bg-less, lighten($black, 12%));
-  @include defineColor(--color-bg-least, lighten($black, 25%));
+  @include define-color(--color-fg-strong, $white);
+  @include define-color(--color-fg-normal, darken($white, 15%));
+  @include define-color(--color-fg-light, darken($white, 30%));
+  @include define-color(--color-bg-normal, $black);
+  @include define-color(--color-bg-less, lighten($black, 12%));
+  @include define-color(--color-bg-least, lighten($black, 25%));
 }
 
-/** Bulma color overrides. */
+// Bulma color overrides.
 $custom-colors: (
     "twitter": ($twitter, $twitter-invert)
 );
