--- a/frontend/src/admin/css/application.css
+++ b/frontend/src/admin/css/application.css
@@ -4,6 +4,7 @@ html, body {
   width: 100%;
   margin: 0;
   padding: 0;
+  overflow-y: hidden;
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
@@ -35,7 +36,7 @@ html, body {
   right: 0;
   padding: 10px 30px 10px 15px; /* leave some space for the close button */
   background: #ee2222;
-  color: #ffffff
+  color: #ffffff;
   text-align: center;
   font-size: 15px;
   /*overflow: hidden;*/
