Added colors and styling for leaflet panels for dark theme.

--- a/frontend/src/assets/vars.scss
+++ b/frontend/src/assets/vars.scss
@@ -70,6 +70,9 @@ body {
   @include define-color(--color-button-bg, $white);
   @include define-color(--color-button-hover, darken($white, 12%));
   @include define-color(--color-tile-background, #ddd);
+
+  @include define-color(--color-leaflet-background, $white);
+  @include define-color(--color-leaflet-color, $black);
 }
 
 // This is the dark theme for the app.
@@ -92,6 +95,9 @@ body {
   @include define-color(--color-button-bg, lighten($black, 10%));
   @include define-color(--color-button-hover, lighten($black, 14%));
   @include define-color(--color-tile-background, #181818);
+
+  @include define-color(--color-leaflet-background, #181818);
+  @include define-color(--color-leaflet-color, rgba(255,255,255,0.6));
 }
  
 // Bulma color overrides.
